# PolyTradingUltra

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_HANDOFF_v0.6.md  IMPLEMENTATION_PLAN_v0.3_v0.4.md  IMPROVEMENT_PLAN_v0.6_PLUS.md  NEXT_UPDATE_PRD_v0.6.md  README.md  pyproject.toml  requirement.md  schema.sql
deploy/: com.polymarket.autopilot.plist  com.polymarket.control-plane.plist  com.polymarket.tg-webhook.plist
deploy/cloud/scripts/: backup.sh  enable-timers.sh  install.sh
deploy/cloud/systemd/: alpha-lab-clob.service  alpha-lab-clob.timer  alpha-lab-clv.service  alpha-lab-clv.timer  alpha-lab-cycle.service  alpha-lab-cycle.timer  alpha-lab-import.service  alpha-lab-import.timer  alpha-lab-odds.service  alpha-lab-odds.timer  db-backup.service  db-backup.timer  mvp-autopilot.service  mvp-autopilot.timer
docs/: CLOB_V2_MIGRATION_PRD.md  CLOB_V2_RUNBOOK.md  CLOB_V2_SDK_NOTES.md
scripts/: check_v2_state.py  control_plane.py  grant_ctf_approvals.py  migrate_to_clob_v2.py  mock_execute.py  mock_proposal.py  restart_system.command  run_clubelo_shadow.py  run_odds_divergence_shadow.py  start_control_plane.command  start_system.command  stop_system.command  system_control.py
skills/poly_scanner/: SKILL.md  run.py
skills/tg_approver/: SKILL.md  run.py
src/polymarket_mvp/: __init__.py  alpha_signal_importer.py  authorize_strategy.py  autopilot.py  autopilot_status.py  build_memos.py  cluster_events.py  common.py  control_plane.py  db.py  db_init.py  event_fetcher.py  kill_switch.py  list_authorizations.py  mock_executor.py  ops_snapshot.py  poly_executor.py  poly_scanner.py  position_report.py  proposer.py  resolution_backfill.py  risk_engine.py  run_exit_agent.py  run_review_agent.py  shadow_execute.py  sync_orders.py  tg_approver.py  trade_review.py  update_positions.py
src/polymarket_mvp/agents/: __init__.py  exit_agent.py  poly_exiter.py  poly_proposer.py  research_agent.py  review_agent.py  supervisor_agent.py
src/polymarket_mvp/migrations/: 20260322_v03_v04.sql  20260401_v05_autopilot.sql  20260408_v06_alpha_lab_import.sql  20260416_v06_observability.sql  20260423_v07_llm_meta.sql  20260425_v08_conviction.sql  20260428_sports_context.sql  20260512_v09_redeem_tracking.sql  20260512_v10_status_check_constraints.sql  20260512_v11_repair_executions_fk.sql  20260513_v12_evidence_sources.sql  20260515_v13_signal_events.sql  __init__.py
src/polymarket_mvp/services/: __init__.py  authorization_service.py  clubelo_signal.py  event_cluster_service.py  kill_switch_service.py  memo_service.py  odds_divergence_signal.py  openclaw_adapter.py  portfolio_risk_service.py  position_manager.py  reconciler.py  redeemer.py  shadow_service.py  sport_keyword_map.py  sports_data.py
tests/: test_alpha_signal_importer.py  test_autopilot.py  test_clob_liquidity_downgrade.py  test_clubelo_signal.py  test_context_adapters.py  test_conviction_sizing.py  test_db_connection_management.py  test_migration_runner_fk.py  test_odds_divergence_signal.py  test_rate_limit_fallback.py  test_resilience_fixes.py  test_runtime_hardening.py  test_trade_review.py  test_v03_v04_flow.py
workflows/: openclaw-polymarket-mvp.yaml
(+2 files in other folders)
