[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mvp"
version = "0.1.0"
description = "Local-first Polymarket trading OS with research, authorization, approval, execution, and position tracking."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "apify-client>=1.6,<2.0",
  "Flask>=3.0,<4.0",
  "requests>=2.31,<3.0",
]

[project.optional-dependencies]
real-exec = [
  "py-clob-client>=0.34.6,<1.0",
]

[project.scripts]
db-init = "polymarket_mvp.db_init:main"
event-fetcher = "polymarket_mvp.event_fetcher:main"
poly-scanner = "polymarket_mvp.poly_scanner:main"
poly-proposer = "polymarket_mvp.proposer:main"
proposal-generator = "polymarket_mvp.proposer:main"
risk-engine = "polymarket_mvp.risk_engine:main"
tg-approver = "polymarket_mvp.tg_approver:main"
poly-mock-executor = "polymarket_mvp.mock_executor:main"
poly-executor = "polymarket_mvp.poly_executor:main"
backfill-resolutions = "polymarket_mvp.resolution_backfill:main"
cluster-events = "polymarket_mvp.cluster_events:main"
build-memos = "polymarket_mvp.build_memos:main"
authorize-strategy = "polymarket_mvp.authorize_strategy:main"
list-authorizations = "polymarket_mvp.list_authorizations:main"
shadow-execute = "polymarket_mvp.shadow_execute:main"
update-positions = "polymarket_mvp.update_positions:main"
sync-orders = "polymarket_mvp.sync_orders:main"
kill-switch = "polymarket_mvp.kill_switch:main"
run-exit-agent = "polymarket_mvp.run_exit_agent:main"
run-review-agent = "polymarket_mvp.run_review_agent:main"
position-report = "polymarket_mvp.position_report:main"
polymarket-autopilot = "polymarket_mvp.autopilot:main"
autopilot-status = "polymarket_mvp.autopilot_status:main"
system-control-plane = "polymarket_mvp.control_plane:main"
import-alpha-signals = "polymarket_mvp.alpha_signal_importer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
